Add URL parser & fix bad config passing
### Added
- Add `url` parser
- Add new types supported in `stringify`

### Fixed
- Fix infinite recursion in config via update to `@aegisjsproject/sanitizer`

--- a/test/index.html
+++ b/test/index.html
@@ -6,22 +6,17 @@
 		<meta name="color-scheme" content="light dark" />
 		<meta http-equiv="Content-Security-Policy"
 			content="default-src 'none';
-			script-src 'self' https://unpkg.com/@shgysk8zer0/ https://unpkg.com/@aegisjsproject/ 'sha384-qOnpoDjAcZtXfanBdq59LK71K0lxdJmnLrSCdgYcsxL4PrFIFIpw79PfBnEwlm+M';
+			script-src 'self' https://unpkg.com/@shgysk8zer0/ https://unpkg.com/@aegisjsproject/ 'sha384-kLwKc1h2n3rxgHAQorvtkYZGT+zfan1+nzl0xYlGL0uR6tweMM5ZrOFt3O1nwUtx';
 			style-src blob:;
 			connect-src 'none';
 			trusted-types empty#html empty#script aegis-sanitizer#html default;
 			require-trusted-types-for 'script';" />
 		<title>Aegis Parsers</title>
-		<script type="importmap" integrity="sha384-qOnpoDjAcZtXfanBdq59LK71K0lxdJmnLrSCdgYcsxL4PrFIFIpw79PfBnEwlm+M">
+		<script type="importmap" integrity="sha384-kLwKc1h2n3rxgHAQorvtkYZGT+zfan1+nzl0xYlGL0uR6tweMM5ZrOFt3O1nwUtx">
 			{
 				"imports": {
-					"@shgysk8zer0/": "https://unpkg.com/@shgysk8zer0/",
-					"@aegisjsproject/": "https://unpkg.com/@aegisjsproject/",
-					"@kernvalley/": "https://unpkg.com/@kernvalley/",
-					"@aegisjsproject/parsers": "../bundle.min.js",
-					"@aegisjsproject/parsers/": ".../",
-					"@aegisjsproject/sanitizer": "../node_modules/@aegisjsproject/sanitizer/sanitizer.js",
-					"@aegisjsproject/sanitizer/": "../node_modules/@aegisjsproject/sanitizer/"
+					"@aegisjsproject/": "../node_modules/@aegisjsproject/",
+					"@shgysk8zer0/": "../node_modules/@shgysk8zer0/"
 				}
 			}
 		</script>
